folder dialog WIP

--- a/SmartMemeSearch/SmartMemeSearch.csproj
+++ b/SmartMemeSearch/SmartMemeSearch.csproj
@@ -17,6 +17,7 @@
     <Content Remove="Assets\model.txt" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Views\FolderManagerDialog.xaml" />
     <None Remove="Views\MainPage.xaml" />
   </ItemGroup>
 
@@ -63,6 +64,11 @@
     <Content Update="Assets\tokenizer.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="Views\FolderManagerDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Page Update="Views\MainPage.xaml">
