--- a/SmartMemeSearch/SmartMemeSearch.csproj
+++ b/SmartMemeSearch/SmartMemeSearch.csproj
@@ -61,6 +61,9 @@
     <Content Update="Assets\merges.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Update="Assets\smile.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="Assets\tokenizer.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
