--- a/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
+++ b/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
@@ -20,6 +20,9 @@
 		<PackageReference Include="Microsoft.ML.OnnxRuntime.DirectML" Version="1.23.0" />
 		<PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.23.2" />
 		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3595.46" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
+		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
+		<PackageReference Include="SixLabors.ImageSharp.Web" Version="3.2.0" />
 		<!-- WebView2 for ads -->
 		<PackageReference Include="Tesseract" Version="5.2.0" />
 	</ItemGroup>
