--- a/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
+++ b/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
@@ -38,9 +38,6 @@
     <Content Include="Assets\clip_text.onnx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Assets\tessdata\lat.traineddata">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\smile.ico" />
     <Content Include="Assets\smile.png" />
@@ -54,5 +51,9 @@
     </Content>
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Assets\tessdata\**\*.*" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
 
 </Project>
