--- a/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
+++ b/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
@@ -22,6 +22,7 @@
 		<PackageReference Include="Microsoft.ML.OnnxRuntime.DirectML" Version="1.23.0" />
 		<PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.23.2" />
 		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3595.46" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
 		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
 		<PackageReference Include="SixLabors.ImageSharp.Web" Version="3.2.0" />
