--- a/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
+++ b/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
@@ -17,6 +17,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);MS_STORE_FREE_WITH_ADDS</DefineConstants>
   </PropertyGroup>
+	<PropertyGroup>
+		<PlatformTarget>x64</PlatformTarget>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+	</PropertyGroup>
 
   <ItemGroup>
     <None Remove="Assets\lat.traineddata" />
@@ -29,13 +33,15 @@
 		<PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.23.2" />
 		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3595.46" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+		<PackageReference Include="Sdcb.PaddleInference.runtime.win64.mkl" Version="3.1.0.54" />
+		<PackageReference Include="Sdcb.PaddleOCR" Version="3.0.1" />
+		<PackageReference Include="Sdcb.PaddleOCR.Models.Local" Version="3.0.1" />
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
 		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
 		<PackageReference Include="SixLabors.ImageSharp.Web" Version="3.2.0" />
+		<PackageReference Include="System.Drawing.Common" Version="10.0.0" />
 		<!-- WebView2 for ads -->
-		<PackageReference Include="Tesseract" Version="5.2.0" />
 	</ItemGroup>
-
 
 	<ItemGroup>
     <Content Include="Assets\cat.jpg">
