--- a/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
+++ b/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
@@ -18,10 +18,6 @@
     <DefineConstants>$(DefineConstants);MS_STORE_FREE_WITH_ADDS</DefineConstants>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Assets\lat.traineddata" />
-  </ItemGroup>
-
 	<ItemGroup>
 		<!-- SQLite for DB in %LOCALAPPDATA% -->
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
@@ -32,9 +28,12 @@
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
 		<PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
 		<PackageReference Include="SixLabors.ImageSharp.Web" Version="3.2.0" />
-		<!-- WebView2 for ads -->
-		<PackageReference Include="Tesseract" Version="5.2.0" />
 	</ItemGroup>
+
+	<Target Name="CopyNativeDll" AfterTargets="Build">
+		<Copy SourceFiles="..\x64\$(Configuration)\OcrNative.dll"
+			  DestinationFolder="$(OutputPath)" />
+	</Target>
 
 
 	<ItemGroup>
