--- a/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
+++ b/SmartMemeSearch.Wpf/SmartMemeSearch.Wpf.csproj
@@ -1,25 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net10.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
-	<UseWindowsForms>true</UseWindowsForms>
-	<ApplicationIcon>Assets\smile.ico</ApplicationIcon>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net8.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
+		<ApplicationIcon>Assets\smile.ico</ApplicationIcon>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);MS_STORE_FREE_WITH_ADDS</DefineConstants>
-  </PropertyGroup>
+		<!-- Required for MSIX .NET apps -->
+		<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);MS_STORE_FREE_WITH_ADDS</DefineConstants>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DefineConstants>$(DefineConstants);MS_STORE_FREE_WITH_ADDS</DefineConstants>
+	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DefineConstants>$(DefineConstants);MS_STORE_FREE_WITH_ADDS</DefineConstants>
+	</PropertyGroup>
+
+	<!-- NuGet packages -->
 	<ItemGroup>
-		<!-- SQLite for DB in %LOCALAPPDATA% -->
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0" />
 		<PackageReference Include="Microsoft.ML.OnnxRuntime.DirectML" Version="1.23.0" />
 		<PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.23.2" />
@@ -30,57 +34,46 @@
 		<PackageReference Include="SixLabors.ImageSharp.Web" Version="3.2.0" />
 	</ItemGroup>
 
-	<Target Name="CopyNativeDll" AfterTargets="Build">
-		<Copy SourceFiles="..\x64\$(Configuration)\OcrNative.dll" DestinationFolder="$(OutputPath)" />
+	<!-- *** CRITICAL FIX *** -->
+	<!-- Copy native DLL both to output folder AND into MSIX runtimes/win-x64/native -->
+	<ItemGroup>
+		<!-- Copy DLL into bin/Debug or bin/Release -->
+		<Content Include="..\x64\$(Configuration)\OcrNative.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<Target Name="CopyNativeToRuntimeFolder" AfterTargets="Build">
+		<MakeDir Directories="$(OutputPath)runtimes\win-x64\native" />
+		<Copy
+			SourceFiles="..\x64\$(Configuration)\OcrNative.dll"
+			DestinationFiles="$(OutputPath)runtimes\win-x64\native\OcrNative.dll"
+			SkipUnchangedFiles="true" />
 	</Target>
 
+	<!-- Add DLL into MSIX under runtimes/win-x64/native -->
+	<Target Name="IncludeNativeInMsix" AfterTargets="PrepareForPublish">
+		<ItemGroup>
+			<FileToPackage Include="..\x64\$(Configuration)\OcrNative.dll">
+				<PackagePath>runtimes/win-x64/native/OcrNative.dll</PackagePath>
+			</FileToPackage>
+		</ItemGroup>
+	</Target>
 
+	<!-- Your assets -->
 	<ItemGroup>
-    <Content Include="Assets\cat.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\clip_image.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\clip_text.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\LockScreenLogo.scale-200.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\smile.ico" />
-    <Content Include="Assets\smile.png" />
-    <Content Include="Assets\SplashScreen.scale-200.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Square150x150Logo.scale-200.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Square44x44Logo.scale-200.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\StoreLogo.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\tokenizer.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Assets\Wide310x150Logo.scale-200.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-	<ItemGroup>
-		<Content Include="Assets\tessdata\**\*.*" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\cat.jpg" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\clip_image.onnx" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\clip_text.onnx" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\LockScreenLogo.scale-200.png" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\smile.ico" />
+		<Content Include="Assets\smile.png" />
+		<Content Include="Assets\SplashScreen.scale-200.png" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\Square150x150Logo.scale-200.png" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\Square44x44Logo.scale-200.png" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\StoreLogo.png" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\tokenizer.json" CopyToOutputDirectory="PreserveNewest" />
+		<Content Include="Assets\Wide310x150Logo.scale-200.png" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
-
-	<ItemGroup>
-	  <None Update="Assets\1.png">
-	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-	  </None>
-	</ItemGroup>
-
 </Project>
