--- a/OcrNative/OcrNative.vcxproj
+++ b/OcrNative/OcrNative.vcxproj
@@ -52,6 +52,7 @@
       </PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(WindowsSdkDir)Include\10.0.26100.0\cppwinrt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -76,6 +77,7 @@
       </PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(WindowsSdkDir)Include\10.0.26100.0\cppwinrt;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
